# ask-ira

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .vercelignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  MCP_ENTERPRISE_DB_GUIDE.md  Makefile  README.md  agentskills_pricing.txt  cline-mcp-config.json  pyproject.toml  railway.json  render.yaml  test_e2e_smoke.py  vercel.json
.claude/: agents.md  api.md  deployment.md  guardrails-security.md  mcp-servers.md  rag.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  pr-checks.yml  security.yml
api/: index.js  index.py
data/: companies.json  company_descriptions.json  eval_queries.json  financial_metrics.json  knowledge_base.json  loader.py  macro_indicators.json  news_articles.json  people.json  sec_filings.json  sentiment_lexicon.json
data/grafana/provisioning/dashboards/: ask-ira.json
data/prometheus/: prometheus.yml
data/sample_reports/: report_aapl.md  report_esg_aapl.md  report_googl.md  report_macro.md  report_msft.md
deployment/: Dockerfile  Dockerfile.dev  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.yml
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml
notebooks/: 01_ai_overview_tools.ipynb  01_fundamentals.ipynb  02_control_flow_functions.ipynb  02_python_fundamentals.ipynb  03_concurrency_oop.ipynb  03_nlp_prompt_embeddings.ipynb  03_rag_pipeline.ipynb  04_decorators_iterators_generators.ipynb  04_langchain_intro.ipynb  04_langgraph_basics.ipynb  05_io_errors_resources.ipynb  05_mcp_servers.ipynb  06_advanced_rag.ipynb  06_numpy_pandas.ipynb  07_ai_agents.ipynb  08_production_api.ipynb  09_deployment_ci_cd.ipynb  10_enterprise_security.ipynb  11_capstone.ipynb  NB1 - Langchain.ipynb  NB2 - LangGraph.ipynb
scripts/: deploy.sh  run_eval.py  seed_data.py  test_boot.py
src/: agent_platform.py  auth.py  cache.py  compliance_router.py  cybersecurity.py  main.py  middleware.py  monitoring.py  portfolio.py  security.py  streaming.py  trade_execution.py
src/agents/: analyst.py  compliance.py  critic.py  graph.py  portfolio_manager.py  researcher.py  risk_assessor.py  state.py  supervisor.py  writer.py
src/api/: __init__.py  auth_routes.py  banking_routes.py  compliance_routes.py  crypto_routes.py  fallback_query.py  insurance_routes.py  market_routes.py  middleware.py  models.py  payments_routes.py  portfolio_routes.py  routes.py  security_routes.py  wallets_routes.py
src/banking/: __init__.py  accounts.py  bills.py  credit_cards.py  deposits.py  loans.py  transactions.py  transfers.py
src/compliance/: __init__.py  aml.py  kyc.py  reporting.py  sanctions.py
src/config/: __init__.py  data_source.py  logging.py  prompts.py  settings.py  validation.py
src/crypto/: __init__.py  compliance.py  defi.py  staking.py  transactions.py  wallets.py
src/guardrails/: input.py  output.py
src/insurance/: __init__.py  claims.py  policies.py  premiums.py
src/mcp_servers/: base.py  enterprise_db.py  internal_kb.py  macro.py  market_data.py  registry.py  sentiment.py
src/payments/: __init__.py  ach.py  engine.py  faster_payments.py  rails.py  sepa.py  swift.py
src/products/: __init__.py  annuities.py  fixed_deposits.py  mutual_funds.py  sip.py
src/rag/: embeddings.py  pipeline.py  reranking.py  retrieval.py  vector_store.py
src/static/: index.html  manifest.json  sw.js
src/static/css/: style.css
src/static/js/: api.js  app.js
src/utils/: callbacks.py  llm.py
src/wallets/: __init__.py  banking_wallet.py  crypto_wallet.py  insurance_wallet.py
tests/: test_agents.py  test_agents_missing.py  test_agents_unit.py  test_api.py  test_banking.py  test_cache.py  test_compliance_domain.py  test_config.py  test_crypto_domain.py  test_cybersecurity.py  test_graph.py  test_insurance_domain.py  test_mcp_servers.py  test_middleware.py  test_models.py  test_monitoring.py  test_payments.py  test_portfolio_domain.py  test_products_domain.py  test_rag.py  test_streaming.py  test_trade_execution.py  test_wallets_domain.py
